fix css flickering

--- a/client/style.css
+++ b/client/style.css
@@ -273,7 +273,6 @@ body {
     scrollbar-width: none;
     border-radius: 5vh;
     background-color: rgba(217, 255, 219, 0.11);
-    animation: fadeIn2 3s, fadeIn 1s;
 }
 
 .projectBox a {
@@ -957,7 +956,7 @@ input {
 
 .galleryPicWide {
     width: 65vw;
-    height: 38vw;
+    height: 75vh;
     border-radius: 1vh;
     border: 1px solid rgba(35, 182, 175, 0.678);
     box-shadow: -0 0 5px rgba(0, 0, 0, 0.25), 0 -0 5px rgba(0, 0, 0, 0.25),
@@ -1073,11 +1072,3 @@ input {
     }
 }
 
-@keyframes fadeIn2 {
-    0% {
-        height: 20vmax;
-    }
-    100% {
-        height: 100vh
-    }
-}
